force-app/main/default/objects/TR_Itinerary_Point__c/TR_Itinerary_Point__c.object-meta.xml
<CustomObject>
    <label>Itinerary Point</label>
    <nameField>
        <label>Itinerary Point Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itinerary Points</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>