force-app/main/default/objects/TR_Itinerary_Point__c/fields/TRIP_City__c.field-meta.xml
<CustomField>
    <fullName>TRIP_City__c</fullName>
    <label>City</label>
    <type>TextArea</type>
</CustomField>