force-app/main/default/objects/TR_Itinerary_Point__c/fields/TRIP_Date__c.field-meta.xml
<CustomField>
    <fullName>TRIP_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>