force-app/main/default/objects/TR_Itinerary_Point__c/fields/TRIP_Estimated_Transportation_Cost__c.field-meta.xml
<CustomField>
    <fullName>TRIP_Estimated_Transportation_Cost__c</fullName>
    <label>Estimated Transportation Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>