force-app/main/default/objects/TR_Itinerary_Point__c/fields/TRIP_Final_Destination__c.field-meta.xml
<CustomField>
    <fullName>TRIP_Final_Destination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Destination</label>
    <type>Checkbox</type>
</CustomField>