force-app/main/default/objects/TR_Itinerary_Point__c/fields/TRIP_Origin__c.field-meta.xml
<CustomField>
    <fullName>TRIP_Origin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Origin</label>
    <type>Checkbox</type>
</CustomField>