force-app/main/default/objects/TR_Itinerary_Point__c/fields/TRIP_State__c.field-meta.xml
<CustomField>
    <fullName>TRIP_State__c</fullName>
    <label>State</label>
    <type>TextArea</type>
</CustomField>