force-app/main/default/objects/TR_Itinerary_Point__c/fields/TRIP_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>TRIP_Total_Cost__c</fullName>
    <formula>TRP_Estimated_Incidental_Costs__c +  TRP_Estimated_Lodging_Costs__c +  TRIP_Estimated_Transportation_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>