force-app/main/default/objects/TR_Itinerary_Point__c/fields/TRIP_Travel_Request__c.field-meta.xml
<CustomField>
    <fullName>TRIP_Travel_Request__c</fullName>
    <label>Travel Request</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Itinerary Points</relationshipLabel>
    <relationshipName>Itinerary_Points</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>