force-app/main/default/objects/TR_Itinerary_Point__c/fields/TRP_Estimated_Lodging_Costs__c.field-meta.xml
<CustomField>
    <fullName>TRP_Estimated_Lodging_Costs__c</fullName>
    <label>Estimated Lodging Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>